Fix rally job in projects that don't have rally-scenario/plugins dir
*) Fix job
*) Improve a bit structure of index.html

Change-Id: I2996caf80f14ab64474bc4719ecf6ac0f89bde8e

--- a/tests_ci/rally-gate/index.html
+++ b/tests_ci/rally-gate/index.html
@@ -20,6 +20,15 @@
         <hr/>
 
         <h2> Job results </h2>
+
+        <p> Logs and files: </p>
+
+        <ul>
+            <li> <a href="console.html"> Benchmarking logs </a> <code> console.html </code> </li>
+            <li> <a href="logs/"> Logs of all services</a> <code> logs/ </code> </li>
+            <li> <a href="rally-plot/"> Rally files </a><code> rally-plot/ </code> </li>
+        </ul>
+
         <p> Results of this job can be obtained in different formats: </p>
         <ul>
             <li> <a href="rally-plot/task.txt"> Rally input task </a> </li>
@@ -27,8 +36,6 @@
             <li> <a href="rally-plot/detailed.txt.gz"> Plain text aggregated data </a> <code> $ rally task detailed </code></li>
             <li> <a href="rally-plot/sla.txt"> SLA checks  </a> <code> $ rally task sla_check </code></li>
             <li> <a href="rally-plot/results.json.gz"> Full result in json </a> <code>$ rally task results</code></li>
-            <li> <a href="console.html"> Full benchmarking log </a> </li>
-            <li> <a href="logs/"> All logs </a> </li>
         </ul>
 
         <h2> About Rally </h2>
