--- a/tests_ci/rally-gate/index.html
+++ b/tests_ci/rally-gate/index.html
@@ -34,6 +34,7 @@
             <li> <a href="rally-plot/task.txt"> Rally input task </a> </li>
             <li> <a href="rally-plot/results.html.gz"> HTML report with graphs </a> <code>$ rally task plot2html</code></li>
             <li> <a href="rally-plot/detailed.txt.gz"> Plain text aggregated data </a> <code> $ rally task detailed </code></li>
+            <li> <a href="rally-plot/detailed_with_iterations.txt.gz"> Plain text aggregated data with detailed iterations </a> <code> $ rally task detailed --iterations-data </code></li>
             <li> <a href="rally-plot/sla.txt"> SLA checks  </a> <code> $ rally task sla_check </code></li>
             <li> <a href="rally-plot/results.json.gz"> Full result in json </a> <code>$ rally task results</code></li>
         </ul>
