Improvements for task plot2html
CLI command `task plot2html' is renamed to `task report',
however old name is still available for compatibility.

HTML output of benchmark results is reworked:
     * scenario select dropdown is changed to aside menu,
       with scenarios methods grouped by classes
     * initially select scenario from URL hash
     * scenario results are divided into tabs
     * new layout and styling, from bootstrap framework
     * jQuery is removed
     * AngularJS is used for rendering all the data

Change-Id: I00db7016900952f397681045ff99d07a0714fafe

--- a/tests/ci/rally-gate/index.html
+++ b/tests/ci/rally-gate/index.html
@@ -32,7 +32,7 @@
         <p> Results of this job can be obtained in different formats: </p>
         <ul>
             <li> <a href="rally-plot/task.txt"> Rally input task </a> </li>
-            <li> <a href="rally-plot/results.html.gz"> HTML report with graphs </a> <code>$ rally task plot2html</code></li>
+            <li> <a href="rally-plot/results.html.gz"> HTML report with graphs </a> <code>$ rally task report</code></li>
             <li> <a href="rally-plot/detailed.txt.gz"> Plain text aggregated data </a> <code> $ rally task detailed </code></li>
             <li> <a href="rally-plot/detailed_with_iterations.txt.gz"> Plain text aggregated data with detailed iterations </a> <code> $ rally task detailed --iterations-data </code></li>
             <li> <a href="rally-plot/sla.txt"> SLA checks  </a> <code> $ rally task sla_check </code></li>
